# fleetreach

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  action.yml  deny.toml  fleet.toml  fleet.toml.example  rust-toolchain.toml
crates/cli/: Cargo.toml
crates/cli/src/: assemble.rs  cli.rs  config.rs  db.rs  diff.rs  enrich.rs  lib.rs  main.rs  npm_reach.rs  orchestrate.rs  reach.rs  resolve.rs  scan.rs  static_reach.rs  vex.rs
crates/cli/tests/: baseline.rs  cli.rs  config.rs  differential.rs  enrich.rs  npm_reach.rs  orchestrate.rs  proptests.rs  reach.rs  report_assembly.rs  resolve.rs  static_reach_e2e.rs  vex_roundtrip.rs
crates/cli/tests/fixtures/: diff-base.json  diff-curr.json  epss.csv  fleet-clean.toml  fleet-errored.toml  fleet-npm.toml  fleet-vex-assertion.toml  fleet-vuln.toml  kev.json
crates/cli/tests/fixtures/reach-clean/src/: lib.rs
crates/cli/tests/fixtures/reach-hex/: app.ex
crates/cli/tests/fixtures/reach-julia/: main.jl
crates/cli/tests/fixtures/reach-maven/: App.java
crates/cli/tests/fixtures/reach-npm/: app.js
crates/cli/tests/fixtures/reach-nuget/: Program.cs
crates/cli/tests/fixtures/reach-pypi/: app.py
crates/cli/tests/fixtures/reach-uses/src/: lib.rs
crates/cli/tests/fixtures/repos/npm-demo/: package-lock.json
crates/cli/tests/fixtures/resolve-project/: Cargo.toml
crates/cli/tests/fixtures/resolve-project/optdep/: Cargo.toml
crates/cli/tests/fixtures/resolve-project/realdep/: Cargo.toml
crates/cli/tests/projects/differential/: Cargo.toml
crates/cli/tests/projects/differential/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: depgraph.rs  finding.rs  lib.rs  osv.rs  outcome.rs  remediation.rs  report.rs  severity.rs
crates/core/tests/: reachability.rs  serialization.rs  verdict.rs
crates/correlate/: Cargo.toml  README.md
crates/correlate/src/: lib.rs
crates/correlate/tests/: correlate.rs
crates/ghactions/: Cargo.toml  README.md
crates/ghactions/src/: db.rs  error.rs  lib.rs  scan.rs  workflow.rs
crates/go/: Cargo.toml  README.md
crates/go/examples/: tier_c_dump.rs
crates/go/src/: error.rs  lib.rs  offline.rs  run.rs
crates/go/tests/: fuzz_parsers.rs  offline.rs  parse.rs
crates/go/tests/fixtures/: xtext.json
crates/go/tests/fixtures/tierc/repo/: go.mod
crates/go/tests/fixtures/tierc/repo_replace_fixed/: go.mod
crates/go/tests/fixtures/tierc/repo_replace_local/: go.mod
crates/go/tests/fixtures/tierc/repo_replace_vuln/: go.mod
crates/npm/: Cargo.toml  README.md
crates/npm/src/: db.rs  error.rs  lib.rs  lockfile.rs  scan.rs
crates/npm/tests/: offline.rs
crates/npm/tests/fixtures/db/: GHSA-lodash-test.json  GHSA-minimist-test.json  not-an-advisory.txt
crates/npm/tests/fixtures/repo/: package-lock.json
crates/nuget/: Cargo.toml  README.md
crates/nuget/examples/: vercmp.rs
crates/nuget/src/: db.rs  error.rs  lib.rs  lockfile.rs  scan.rs  version.rs
crates/nuget/tests/: ordering_golden.rs
crates/nuget/tests/fixtures/: ordering.tsv
crates/packagist/: Cargo.toml  README.md
crates/packagist/examples/: vercmp.rs
crates/packagist/src/: db.rs  error.rs  lib.rs  lockfile.rs  scan.rs  version.rs
crates/packagist/tests/: ordering_golden.rs
crates/packagist/tests/fixtures/: ordering.tsv
crates/pypi/: Cargo.toml  README.md
crates/pypi/examples/: vercmp.rs
crates/pypi/src/: db.rs  error.rs  lib.rs  lockfile.rs  scan.rs  version.rs
crates/reach/: Cargo.toml  README.md
crates/reach-driver/: Cargo.toml  build.rs  rust-toolchain.toml
crates/reach-driver/src/: graph.rs  main.rs  rta.rs
crates/reach-driver/tests/: call_graph.rs  corpus.rs  mono_items.rs
crates/reach-driver/tests/fixtures/: direct_calls.rs  dyn_dispatch.rs  dyn_rta_tight.rs  ffi_opaque.rs  fn_ptr.rs  not_reachable.rs  rta_overapprox.rs
crates/reach/examples/: dogfood.rs
crates/reach/src/: cache.rs  lib.rs  merge.rs  model.rs  project.rs  sandbox.rs
crates/reach/src/cache/: integrity.rs
crates/reach/tests/: analysis.rs  bench_reach_side.rs  cross_crate.rs  e2e.rs  lib_roots.rs  opaque_frontier.rs  sandbox.rs
crates/reach/tests/fixtures/: direct_calls.graph.json  dyn_dispatch.graph.json  ffi_opaque.graph.json  lib_only.json
crates/reach/tests/fixtures/cross_crate/: bin.json  vuln_lib.json
crates/reach/tests/fixtures/cross_dyn/: animal_lib.json  bin.json
crates/reach/tests/fixtures/prune_xc/: bin.json  widgets.json
crates/reach/tests/projects/cross_crate/: Cargo.toml
crates/reach/tests/projects/cross_crate/src/: main.rs
crates/reach/tests/projects/cross_dyn/: Cargo.toml
crates/reach/tests/projects/cross_dyn/animal_lib/: Cargo.toml
crates/reach/tests/projects/cross_dyn/src/: main.rs
crates/reach/tests/projects/feature_gated/: Cargo.toml
crates/reach/tests/projects/feature_gated/src/: main.rs
crates/reach/tests/projects/feature_gated/vuln_lib/: Cargo.toml
crates/reach/tests/projects/generic_uninstantiated/: Cargo.toml
crates/reach/tests/projects/generic_uninstantiated/src/: main.rs
crates/reach/tests/projects/generic_uninstantiated/vuln_gen/: Cargo.toml
crates/reach/tests/projects/lib_only/: Cargo.toml
crates/reach/tests/projects/lib_only/src/: lib.rs
crates/reach/tests/projects/prune_xc/: Cargo.toml
crates/reach/tests/projects/prune_xc/src/: main.rs
crates/reach/tests/projects/sandbox_probe/: .gitignore  Cargo.toml  build.rs
crates/report/: Cargo.toml  README.md
crates/report/src/: lib.rs  vex.rs
crates/report/tests/: diff.rs  render.rs
crates/rubygems/: Cargo.toml  README.md
crates/rubygems/examples/: vercmp.rs
crates/rubygems/src/: db.rs  error.rs  lib.rs  lockfile.rs  scan.rs  version.rs
crates/rubygems/tests/: ordering_golden.rs
crates/rubygems/tests/fixtures/: ordering.tsv
crates/scan/: Cargo.toml  README.md
crates/scan/src/: lib.rs
crates/scan/tests/: scan.rs
crates/swift/: Cargo.toml  README.md
crates/swift/src/: db.rs  error.rs  lib.rs  lockfile.rs  scan.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fleet_toml.rs  go_mod.rs  lockfile.rs
(+59 files in other folders)
