[package]
name = "fleetreach-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Fleet-wide dependency security audit across 12 ecosystems from one CLI: deduplicated and ranked, with blast-radius analysis, a batched remediation queue, and sound Rust reachability."

[lints]
workspace = true

[features]
# Opt-in network access: advisory-DB fetch (via scan) + KEV/EPSS/NVD enrichment
# (via ureq). Off by default so the build is pure-Rust (no rustls/aws-lc/ring);
# without it, use --db for the advisory DB and --kev-file/--epss-file to enrich. M-5.
network = ["dep:ureq", "fleetreach-scan/network"]

[lib]
name = "fleetreach_cli"
path = "src/lib.rs"

[[bin]]
name = "fleetreach"
path = "src/main.rs"

[dependencies]
fleetreach-core = { path = "../core", version = "1.0.1" }
fleetreach-scan = { path = "../scan", version = "1.0.1" }
fleetreach-reach = { path = "../reach", version = "1.0.1" }
fleetreach-correlate = { path = "../correlate", version = "1.0.1" }
fleetreach-report = { path = "../report", version = "1.0.1" }
fleetreach-go = { path = "../go", version = "1.0.1" }
fleetreach-npm = { path = "../npm", version = "1.0.1" }
fleetreach-pypi = { path = "../pypi", version = "1.0.1" }
fleetreach-rubygems = { path = "../rubygems", version = "1.0.1" }
fleetreach-packagist = { path = "../packagist", version = "1.0.1" }
fleetreach-nuget = { path = "../nuget", version = "1.0.1" }
fleetreach-julia = { path = "../julia", version = "1.0.1" }
fleetreach-swift = { path = "../swift", version = "1.0.1" }
fleetreach-hex = { path = "../hex", version = "1.0.1" }
fleetreach-ghactions = { path = "../ghactions", version = "1.0.1" }
fleetreach-maven = { path = "../maven", version = "1.0.1" }
serde = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }
# blocking HTTP for the KEV/EPSS feeds + advisory-DB fetch (the `network` feature);
# pulls rustls (vendored-C crypto), so it is optional and off by default. M-5.
ureq = { version = "2", optional = true }
rayon = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
