[package]
name = "fleetreach-nuget"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "NuGet (.NET) ecosystem feeder for fleetreach: toolchain-free packages.lock.json + OSV matching into the shared finding model."

[lints]
workspace = true

[dependencies]
fleetreach-core = { path = "../core", version = "1.0.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
