[package]
name = "fleetreach-report"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Side-effect-free rendering of a FleetReport to table and JSON."

[lints]
workspace = true

[dependencies]
fleetreach-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
comfy-table = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
